frontend/test/should_pass/array_sort_reverse_model.gm
enum ET {
	foo, bar, baz, qux
}

node class N
{
	i:int;
	s:string;
	d:double;
	e:ET;
}
