frontend/test/should_fail/method_model_inh_ovrrd_failxp2.gm
external class N
{
	external procedure bar(int, int) : (int, int);
	external procedure baz(N);
}

external class NN extends N
{
	external procedure bar(int, int) : (string, boolean);
	external procedure baz(NN);
}
